--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">diabetesApp</string>
+    <string name="app_name">diabetesCompanion</string>
     <string name="action_history">Show History</string>
     <string name="action_reminder">Set a Reminder</string>
     <string name="action_init">Initialize parameters</string>
@@ -13,8 +13,10 @@
     <string name="prompt_Sugar">Sugar level:  </string>
     <string name="prompt_Carbo">Carbohydrates:  </string>
     <string name="action_save">SAVE</string>
-    <string name="prompt_insulin">How much Insulin did you take?</string>
     <string name="claculate">calculate</string>
     <string name="prompt_Comment">Comment: </string>
+    <string name="generate_pdf_report">Generate PDF Report</string>
+    <string name="reset_database">Reset Database</string>
+    <string name="exit">Exit</string>
 
 </resources>
