--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -48,4 +48,6 @@
     <string name="Dmessage">האם אתה באמת רוצה למחוק את השורה?</string>
     <string name="select_entry_to_delete">בחר שורה למחיקה:</string>
     <string name="H_boluss">המלצה</string>
+    <string name="toast_invalidInput">קלט שגוי! נתונים לא הוכנסו לטבלה.</string>
+    <string name="promt_insulin">כמה יחודות אינסולין הוזרקו</string>
 </resources>
