--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -54,4 +54,6 @@
     <string name="PDFtitle">"דו"ח רמת סוכר עבור "</string>
     <string name="PDFgenerated">"תאריך הפקה: "</string>
     <string name="PDFnotice">הדו"ח הופק אוטומטית על ידי diabetesCompanion </string>
+    <string name="action_plot">הצג גרף</string>
+    <string name="ChartHeader">גרף רמות סוכר</string>
 </resources>
