--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -31,7 +31,7 @@
     <string name="display_initial_value">ערכים נוכחיים</string>
     <string name="to">עד:</string>
     <string name="from">משעה:</string>
-    <string name="sugar_target">ערך סוכר רצוי</string>
+    <string name="sugar_target">רמת סוכר רצויה</string>
     <string name="correct_factor">פקטור תיקון</string>
     <string name="carbo_ins_ratio">יחס פחמימות/סוכר</string>
     <string name="initialization_page">----- דף איתחול נתונים -----</string>
@@ -62,4 +62,45 @@
     <string name="CovError2">נתוני פקטור תיקון לא מכסים 24 שעות! הנתונים לא ישמרו. </string>
     <string name="CovError3">נתוני ערך סוכר רצוי לא מכסים 24 שעות! הנתונים לא ישמרו. </string>
     <string name="close">סגור</string>
+    <string name="action_help">עזרה</string>
+    <string name="Intro0">
+        האפליקציה הזו תוכננה עבור חולי סוכרת מסוג type-1.
+        האפליקציה מסיעת לחולה להחליט על כמות האינסולין שעליו להזריק
+           בהתאם לרמת הסוכר הנוכחית וכמות הפחמימות שברצונו לצרוך.\n בהפעלה הראשונה יש לאתחל את הנתונים האישיים (במסך האתחול) על מנת שחישובי הבולוס יהיו מתאימים למשתמש הספציפי.
+    </string>
+    <string name="Intro0_header">אפליקצית Diabetes Companion</string>
+    <string name="Intro1_header">חישוב בולוס ושמירת נתונים</string>
+    <string name="Intro1"> לאחר איתחול האפליקציה, ניתן לחשב  \"בולוס מומלץ\". יש למלא את השדות המתאימים (רמת סוכר ופחמימות. אפשר גם
+    להוסיך מספר תווים בשדה ההערה) וללחוץ על לחצן \"חשב\". הבולוס המומלץ יוצג על המסך.
+    כעת ניתן לשמור את הנתונים על ידי לחיצה על לחצן \"שמור\".
+    האפליקציה תבקש מהמשתמש להכניס את כמות האינסולין שהוזרקה בפועל ותשמור את הנתונים בטבלת ההיסטוריה.</string>
+    <string name="Intro2">במסך האיתחול יש לקבוע ערכים עבור הפרמטרים הבאים: \n
+    יחס פחמימות אינסולין  - זהו כמות הפמימות (בגרמים) המכוסה על ידי יחידת אינסולין אחת. (ערך אופייני  1-15) \n
+    פקטור תיקון - ירידה ברמת הסוכר הנגרמת על ידי יחידת אינסולין אחת במהלך שעתיים מזמן ההזרקה (ערך אופייני 30-60) \n
+  רמת סוכר רצויה - זוהי רמת הסוכר שתחשב לנורמלית עבור המשתמש (ערך אופייני 110-140) \n
+
+ <b> יש להתייעץ עם הרופא המטפל לגבי קביעת הערכים המתאימים!</b>
+    </string>
+    <string name="Intro2_header">איתחול נתונים</string>
+    <string name="Intro3_header">איתחול נתונים (המשך..)</string>
+    <string name="Intro3">  הערות:\n
+
+        1) אפשר לקבוע ערכים שונים לטווחי זמן שונים. לדוגמה: \n אם רוצים פקטור תיקון שונה לשעות הבוקר (נאמר מ 7 עד 13: 50) ולשעות הערב והלילה (60) יש לבצע את הפעולות הבאות: \n
+        א) הכנס לשדות המתאימים: משעה: 7  עד: 13 ערך: 50 ולחץ על לחצן \" הוסף \". \n
+        ב) הכנס לשדות המתאימים: משעה:13 עד: 7 ערך: 60 ולחץ על לחצן \"הוסף\".\n
+        ג) לאחר הכנסת כל הנתונים יש ללחוץ על \"שמור ערכי איתחול\" כדי שהנתונים ישמרו.\n
+        \n  \n
+        אם ברצונך לשנות את הערכים עליך לבחור את סוג הפרמטר (על ידי לחיצה על הלחצן המתאים) וללחוץ על \"אפס\". הנתונים עבור אותו פרמטר ימחקו ויהיה אפשר להכניס פרמטרים חדשים.
+
+    </string>
+    <string name="Intro4_header">פעולות נוספות</string>
+    <string name="Intro4">   <b>זוהי רשימת הפעולות שניתן לבצע דרך התפריט הראשי:</b>
+          \n  \n
+      1)  הדפסת טבלת ההיסטוריה \n
+    2)  הצגת גרפית של נתוני רמות הסוכר  \n
+    3)  יצירת מסמך PDF עם נתוני הטבלה ושליחתו במייל לנמען\n
+   4)   מחיקת שורה מהטבלה\n
+   5) מחיקת כל הטבלה \n
+
+    </string>
 </resources>
